--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 
       <p id="text">Je kunt me zien!</p>
       <button id="hideText">Verberg tekst</button>
+
+      <ul id="itemList">
+        <li>Item 1</li>
+        <li>Item 2</li>
+      </ul>
+      <button id="addItem">Voeg item toe</button>
     </main>
   </body>
 </html>
